# optimus-cost-agent

./: .env.example  .env.gateway.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sgconfig.yml
.github/workflows/: guardrails.yml
docs/: agent-evaluation-tooling-research.md  context-window-optimization-strategy.md  graphrag-research.md
docs/superpowers/plans/: 2026-07-01-core-runtime-acp-transport.md  2026-07-01-mode-state-machine-mutation-guard.md  2026-07-01-phase-1-roadmap.md  2026-07-02-gateway-only-configuration-gateway-client.md  2026-07-03-permission-engine-pre-tool-guard-shell-safety.md  2026-07-03-tool-policy-evidence-acquisition.md  2026-07-04-plan-6-5-guardrail-hardening-mcp-runtime-trust.md  2026-07-04-prompt-injection-mcp-trust-ci-guardrail-parity.md  2026-07-04-usage-accounting-evidence-ledger-observability.md  2026-07-05-retry-fitness-gates-golden-tasks-release-gate.md  2026-07-06-bounded-goal-loops-curated-workflow-skills.md  2026-07-06-plan-8-5-release-gate-hardening.md  2026-07-07-agent-orchestration-end-to-end-coding-workflow.md  2026-07-07-local-optimus-gateway-service.md  2026-07-07-plan-9-5-working-acp-agent-completion.md  2026-07-07-plan-9-6-live-verification-and-lld-alignment.md  2026-07-08-plan-9-7-local-dev-infra-autostart-and-setup.md  2026-07-09-plan-9-75-zed-hitl-acp-toolcall-permission.md  2026-07-10-plan-9-6-live-signoff-execution.md  2026-07-10-plan-9-6-phase-c-operator-runbook.md  2026-07-10-plan-9-8-task-aware-workspace-context.md  2026-07-11-plan-9-85-multi-turn-read-observe-replan.md  2026-07-12-plan-9-87-model-initiated-replanning-live-refusal.md  2026-07-13-plan-9-88-fu4b-evidence-remediation-and-plan-9-87-closure.md  2026-07-14-plan-9-9-operator-packaging-and-credential-diagnostics.md  2026-07-14-plan-9-95-usage-telemetry-evidence-tooling-correctness.md  2026-07-15-plan-9-96-operator-controlled-debug-and-launch-trust.md  2026-07-18-plan-9-98-real-acpx-session-evidence.md  2026-07-19-plan-9-98-fu-1-workspace-identity-linux-ci.md  2026-07-19-plan-9-98-fu-2-approval-time-runtime-bootstrap.md  2026-07-22-plan-9-98-fu-3-posix-runtime-root-tests.md  2026-07-22-plan-9-99-credential-uri-security-snapshot-canonicalization.md  2026-07-23-consolidated-deferred-followups-backlog.md  2026-07-23-plan-10-1-p9-96-follow-up-remediation.md  2026-07-23-plan-10-2-p9-96-fu7-effective-row-display-provenance.md  2026-07-24-plan-10-3-uv-lock-surface-audit-remediation.md
docs/superpowers/reviews/: 2026-07-03-plan-5-architect-review.md  2026-07-03-plan-5-security-review.md  2026-07-04-plan-6-5-architect-review-round-2.md  2026-07-04-plan-6-5-architect-review.md  2026-07-04-plan-6-security-review-round-2.md  2026-07-04-plan-6-security-review.md  2026-07-04-plan-7-architect-review-round-2.md  2026-07-04-plan-7-architect-review.md  2026-07-04-pr-13-permission-engine-review.md  2026-07-15-plan-9-96-implementation-plan-approval.md  2026-07-15-plan-9-96-logging-surface-audit.json  2026-07-15-plan-9-96-security-contract-approval.md  2026-07-18-plan-9-98-implementation-plan-approval-v2.md  2026-07-18-plan-9-98-implementation-plan-approval-v3.md  2026-07-18-plan-9-98-implementation-plan-approval-v4.md  2026-07-18-plan-9-98-implementation-plan-approval-v5.md  2026-07-18-plan-9-98-implementation-plan-approval-v6.md  2026-07-18-plan-9-98-implementation-plan-approval.md  (+11 more)
reports/: github-issue-zed-session-prompt-hang.md  phase1-release-gate.json  plan-9-6-e2e-acp-transcript.json  plan-9-6-e2e-acp-transcript.pre-d1-run.json  plan-9-6-live-agent-transcript.json  plan-9-6-phase-a-evidence.md  plan-9-6-phase-b-evidence.md  plan-9-6-phase-d-evidence.md  plan-9-7-manual-e2e-evidence.md  plan-9-75-zed-hitl-defect-notes.md  plan-9-75-zed-hitl-runtime-evidence.md  plan-9-8-task-aware-context-evidence.md  plan-9-85-multi-turn-acpx-evidence.md  plan-9-87-model-replanning-refusal-acpx-evidence.md  plan-9-9-operator-packaging-evidence.md  plan-9-95-usage-telemetry-evidence.md  plan-9-96-operator-debug-launch-trust-evidence.md  plan-9-98-real-acpx-session-evidence.md  process-state.json  sprint1-release-evidence.md
src/optimus_gateway/: __init__.py  __main__.py  anthropic_client.py  model_mapping.py  models.py  pricing.py  providers.py  responses.py  server.py  upstream_client.py
src/optimus_security/: __init__.py  launch_manifest.py  sanitization.py
tests/: conftest.py
tests/integration/: conftest.py  redis_support.py
tests/unit/: test_package_imports.py
tools/: run_local_gateway.ps1  run_local_gateway.sh  run_phase1_release_gate.py  run_plan987_acpx_live_evidence.py  run_plan988_fu4b_live_evidence.py  run_plan996_acpx_security_evidence.py  verify_live_agent.py  verify_plan987_acpx_evidence.py  verify_plan996_logging_surfaces.py  verify_plan99_noneditable_install.py
tools/ast-grep/: no_eval.yml
(+272 files in other folders)
