[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "optimus-cost-agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "confusable-homoglyphs>=3.3",
  "pydantic>=2.8",
  "redis>=5",
]

[project.scripts]
optimus-agent = "optimus.acp.__main__:main"

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "coverage>=7.6",
  "detect-secrets>=1.5",
  "pre-commit>=3.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
  "-m",
  "not requires_redis and not requires_gateway and not e2e",
]
markers = [
  "requires_redis: integration test that needs a live TimeSeries-capable Redis server",
  "requires_gateway: integration test that needs real Optimus Gateway credentials",
  "e2e: end-to-end test that spawns the real ACP stdio process",
]

[tool.coverage.run]
branch = true
source = ["src/optimus"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"tools/verify_live_agent.py" = ["E402"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B105", "B310", "B404", "B603"]
